--- a/hello_seymore/index.html
+++ b/hello_seymore/index.html
@@ -3,11 +3,13 @@
   <head><meta charset="utf-8"/>
   <script type="text/javascript" src="out/goog/base.js"></script>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-  <script type="text/javascript" src="jquerytest.js"></script>
+  <script type="text/javascript" src="jquerytest.js"></script> 
+  <script type="text/javascript" src="jslib/elasticsearch.js"></script>
+
   <script type="text/javascript">
     goog.require("jquerytest.core");
   </script>
-  
+
   </head>
   <body>
     <div id="app"></div> <!-- add this line -->
